--- a/frontend/Active-learning-project/src/app/master-layout/layouts/user-management/modal/modal.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/layouts/user-management/modal/modal.component.html
@@ -19,7 +19,7 @@
                                 <div class="form-group col-md-6">
                                     <label for="name">Name</label>
                                     <input type="text" class="form-control" id="name" formControlName="name"
-                                        value="{{user.lastname | titlecase}} {{user.firstname | titlecase}}"
+                                        value="{{user.lastname | titlecase}} {{user.name | titlecase}}"
                                         />
                                 </div>
                                 <div class="form-group col-md-6">
