--- a/frontend/Active-learning-project/src/app/master-layout/layouts/user-management/user-management.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/layouts/user-management/user-management.component.html
@@ -70,7 +70,7 @@
 										class="rounded-circle" />
 								</ng-template>
 								<div class="ms-3">
-									<p class="fw-bold mb-1">{{user.lastname | titlecase}} {{user.firstname | titlecase}}
+									<p class="fw-bold mb-1">{{user.lastname | titlecase}} {{user.name | titlecase}}
 									</p>
 									<p class="text-muted mb-0">{{user.username}}</p>
 								</div>
