added backend controllers

--- a/frontend/Active-learning-project/src/app/master-layout/modals/course-registration/course-registration.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/modals/course-registration/course-registration.component.html
@@ -1,6 +1,9 @@
 <mat-stepper #stepper>
   <mat-step label="Choose Language">
-    <div class="stepperContent rounded" mat-dialog-content>
+    <div class="stepperContent rounded d-flex flex-row" mat-dialog-content>
+      <alp-programming-language></alp-programming-language>
+      <alp-programming-language></alp-programming-language>
+      <alp-programming-language></alp-programming-language>
       <alp-programming-language></alp-programming-language>
     </div>
     <div class="stepperAction" mat-dialog-actions>
