--- a/frontend/Active-learning-project/src/app/master-layout/modals/views/programming-language/programming-language.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/modals/views/programming-language/programming-language.component.html
@@ -1,5 +1,5 @@
-<div class="row m-0">
-  <!-- <div *ngFor="let lang of mockLanguagesData;"> -->
+<!-- <div class="row m-0">
+  <div *ngFor="let course in courseValue">
     <div class="rounded bg-dark p-0 m-0 col-lg-4 col-md-5 col">
       <mat-card>
         <mat-card-header class="m-0 p-1">
@@ -7,37 +7,31 @@
             <img mat-card-image src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" alt="avatar" />
           </div>
           <mat-card-title class="text-light m-0 pl-2">
-            <!-- <b>{{ lang.name }}</b> -->
-            Angular
+            <b>{{ course.name }}</b>
+            Angular JS
           </mat-card-title>
         </mat-card-header>
       </mat-card>
     </div>
-    <div class="rounded bg-dark p-0 m-0 col-lg-4 col-md-5 col">
-      <mat-card>
-        <mat-card-header class="m-0 p-1">
-          <div class="bg-light rounded p-0 m-0" mat-card-avatar>
-            <img mat-card-image src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="avatar" />
-          </div>
-          <mat-card-title class="text-light m-0 pl-2">
-            <!-- <b>{{ lang.name }}</b> -->
-            Java
-          </mat-card-title>
-        </mat-card-header>
-      </mat-card>
-    </div>
-    <div class="rounded bg-dark p-0 m-0 col-lg-4 col-md-5 col">
-      <mat-card>
-        <mat-card-header class="m-0 p-1">
-          <div class="bg-light rounded p-0 m-0" mat-card-avatar>
-            <img mat-card-image src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt="avatar" />
-          </div>
-          <mat-card-title class="text-light m-0 pl-2">
-            <!-- <b>{{ lang.name }}</b> -->
-            Bootstrap
-          </mat-card-title>
-        </mat-card-header>
-      </mat-card>
-    </div>
-  <!-- </div> -->
+  </div>
 </div>
+
+ -->
+
+
+ <mat-card class="card">
+  <mat-card-header>
+    <mat-card-title>ANGULAR</mat-card-title>
+    <mat-card-subtitle>Frontend web development</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" alt="Photo of a Shiba Inu">
+  <mat-card-content>
+    <p>
+      Angular is a TypeScript-based, free and open-source web application framework 
+      led by the Angular Team at Google and by a community of individuals and corporations.
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button type="button" class="btn btn-outline-primary">SELECT</button>
+  </mat-card-actions>
+</mat-card>
