--- a/frontend/Active-learning-project/src/app/master-layout/layouts/board/board/board.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/layouts/board/board/board.component.html
@@ -1,27 +1,9 @@
-<div class="row" style="margin-top:10px;margin-bottom: 24px;">  
-    <div class="col-sm-12 btn btn-success">  
-      How To Add Kanban Board in Angular Application  
-    </div>  
-  </div>  
-  <div class="control-section">  
-    <div class="col-lg-12 content-wrapper">  
-      <div id='container'>  
-        <ejs-kanban #kanbanObj cssClass='kanban-swimlane' keyField='City' [dataSource]='BoradData1'  
-          [cardSettings]='cardSettings'>  
-          <e-columns>  
-            <e-column *ngFor="let data of headerdata" headerText='{{data.text}}' keyField='{{data.key}}'  
-              allowToggle='true'></e-column>
-          </e-columns>  
-          <ng-template #cardSettingsTemplate let-data>  
-            <div class="card" style="width:400px">  
-              <div class="card-body">  
-                <h6 class="card-title">{{data.Name}}</h6>  
-                <p class="card-text">{{data.Tech}}</p>  
-                <p class="card-text">{{data.Age}}</p>  
-              </div>  
-            </div>  
-          </ng-template>  
-        </ejs-kanban>  
-      </div>  
-    </div>  
-  </div> 
+<mat-card class="card" *ngFor="let column of columns">
+  <mat-card-header>
+    <div mat-card-avatar class="header-image"></div>
+    <mat-card-title>{{ column.name }}</mat-card-title>
+    <mat-card-content>
+    <alp-card></alp-card>
+  </mat-card-content>
+  </mat-card-header>
+</mat-card>
