--- a/frontend/Active-learning-project/src/app/master-layout/layouts/user-management/modal/modal.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/layouts/user-management/modal/modal.component.html
@@ -52,7 +52,7 @@
                                 <div class="form-group col-md-6">
                                     <label for="role">Roles</label>
                                     <input type="text" class="form-control" id="role" formControlName="role"
-                                        value="{{user.roles | arrayToString | removeRoleAndUnderScore}}"
+                                        value="{{user.roles }}"
                                         />
                                 </div>
                             </div>
